<resources>
    <string name="app_name">FinalProject</string>

    <string name="app_info">Expense Tracker - v1.00</string>
    <string name="company_img_desc">Company Image</string>

    <string name="user_hint">Username</string>
    <string name="pass_hint">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>

    <string name="retype_pass_hint">Retype Password</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone</string>
    <string name="sign_up_btn">Sign me up!</string>

    <string name="username_err">Enter a valid username!</string>
    <string name="password_err">Enter a valid password!</string>
    <string name="email_err">Enter a valid email!</string>
    <string name="phone_err">Enter a valid phone number!</string>

    <string name="welcome">Welcome</string>
    <string name="annual_hint">Annual Income</string>
    <string name="daily_expense_hint">Daily Expenses</string>
    <string name="save_goal_hint">Save goal</string>
    <string name="title_activity_item">itemActivity</string>

    <string name="settings">Settings</string>
    <string name="reports">Reports</string>

    <string name="save_settings">Save Settings</string>
    <string name="add_item">Add Item</string>

    <string name="item_name_hint">Item Name</string>
    <string name="item_cost_hint">Item Cost</string>
    <string name="submit_item">Submit Item</string>

    <string name="annual_income">Annual Income</string>
    <string name="daily_expense">Daily Expense</string>
    <string name="desired_saving">Desired Saving</string>
    <string name="daily_saving">Daily Saving</string>
    <string name="annual_saving">Annual Saving</string>
    <string name="item_report">Item Report</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>